# pep440-cpp

./: .clang-format  .clangd  CHANGELOG.md  CMakeLists.txt  README.md
include/pep440/: version.hpp
src/pep440/: version.cpp
tests/: version_tests.cpp
